# OntoZSL-CGAN

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
configs/dp_cgans/: default.json  generic.json  load.json  onto.json
configs/embedding/: config.json  ppi_yeast.json  yeast.json  yeast_v10.json  yeast_v2.json  yeast_v3.json  yeast_v4.json  yeast_v5.json  yeast_v6.json  yeast_v7.json  yeast_v8.json  yeast_v9.json
configs/experiments/: config.json  statistics.json
configs/onto_cgans/: generic.json  load.json
configs/ontozsl_cgans/: generic.json  load.json
configs/preprocess/: generic.json  load.json
configs/preprocessing/: config.json
configs/preprocessing/configs/: generic.json  load.json
configs/zsl/: config.json  config_test.json
mowl/: mowl_borg-0.2.0-py38-none-any.whl
src/dp_cgans/: __init__.py  __main__.py  base.py  dp_cgan_init.py  onto_base.py  onto_data_sampler.py  onto_dp_cgan_init.py  ontology_embedding.py  ontozsl_base.py  ontozsl_cgan_init.py  ontozsl_data_sampler.py
src/dp_cgans/embeddings/: __init__.py  embed.py  owl2vec.py  projections.py  projectors.py  random_walks.py  utils.py
src/dp_cgans/embeddings/utils/: __init__.py  utils.py
src/dp_cgans/experiments/: ExperimentModelType.py  decision_tree_model.py  experiment_model.py  logistic_regression_model.py  random_forest_model.py
src/dp_cgans/experiments/classifiers/: __init__.py  decision_tree_model.py  experiment_model.py  logistic_regression_model.py  random_forests_model.py
src/dp_cgans/experiments/preprocess/: __init__.py  csv_to_txt.py  preprocessing_enums.py  preprocessor.py  sparql.py  (+1 more)
src/dp_cgans/ontology/: __init__.py
src/dp_cgans/preprocess/: __init__.py  converters.py  csv_to_txt.py  data_downloader.py  dataset.py  preprocessor.py  process.py  sparql.py  utils.py
src/dp_cgans/synthesizers/: __init__.py  dp_cgan.py  onto_dp_cgan.py  onto_gan.py  ontozsl_cgan.py
src/dp_cgans/utils/: __init__.py  config.py  data_types.py  files.py  logging.py
(+14 files in other folders)
